--- a/RX.html
+++ b/RX.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>RX 2022 | Início</title>
+	<title>RX 2022 | Inï¿½cio</title>
 	<link rel="shortcut icon" href="Imagens_Operacao/maquina_transp.png" type="image/x-icon" />
 
 	<link rel="stylesheet" href="site.css" />
@@ -16,11 +16,6 @@
 	<a class="logo3">CNC Machining</a>
 </header>
 
-
-
-
-
-
 <img alt="maquina" class="logo2" src="Imagens_Operacao/maquina_transp.png" />
 
 
@@ -34,18 +29,18 @@
 		<a href="oper_0_menu.html" " class="w">OPERATIONS</a></div>
 	<div>
 		<a href="" " class="b">POS PROCESSAR</a>
-		<a href="" " class="b">DOC. TÉCNICA</a>
+		<a href="" " class="b">DOC. Tï¿½CNICA</a>
 		<a href="" " class="b">MOVER OBJETO</a></div>
 	<div>
 		<a href="" " class="b">RASCUNHO</a>
 		<a href="" " class="b">MEDIR</a>
 		<a href="" " class="b">ORIENTAR WCS</a></div>
 	<div>
-		<a href="" " class="b">SIMULAÇÃO</a>
+		<a href="" " class="b">SIMULAï¿½ï¿½O</a>
 		<a href="" " class="b">TRANSFORMAR</a>
 		<a href="" " class="b">EXCLUIR_TRANSFORME</a></div>
 	<div>
-		<a href="" " class="b">BARRA DE SELEÇÃO</a></div>
+		<a href="" " class="b">BARRA DE SELEï¿½ï¿½O</a></div>
 
 </article>
  
