--- a/RX.html
+++ b/RX.html
@@ -9,7 +9,7 @@
 <body>
 
 <header class="cabecalho">
-	<a href="index.html">
+	<a href="RX.html">
   
 	<img alt="rx_logo" class="logo1" src="Imagens_Operacao/rx_transp.png" /></a>
 
