--- a/RX.html
+++ b/RX.html
@@ -9,7 +9,7 @@
 <body>
 
 <header class="cabecalho">
-	<a href="RX.html">
+	<a href="index.html">
   
 	<img alt="rx_logo" class="logo1" src="Imagens_Operacao/rx_transp.png" /></a>
 
@@ -48,23 +48,6 @@
 
 
 <footer class="rodape">
-        <ul class="media-list">
-            <li>
-                <a class="media-link facebook" href="https://www.facebook.com/FacImpacta/" target="blank">Facebook</a>
-            </li>
-            <li>
-                <a class="media-link instagram" href="https://www.instagram.com/faculdadeimpacta/" target="blank">Instagram</a>
-            </li>
-            <li>
-                <a class="media-link linkedin" href="https://www.linkedin.com/edu/faculdade-impacta-tecnologia-161006/" target="blank">Linkedin</a>
-            </li>
-            <li>
-                <a class="media-link twitter" href="https://twitter.com/facimpacta/" target="blank">Twitter</a>
-            </li>
-            <li>
-                <a class="media-link youtube" href="https://www.youtube.com/user/GrupoImpacta/" target="blank">Youtube</a>
-            </li>
-        </ul>
         <p>2020 RX Solutions Manufacture.</p>
     </footer>
 </body>
