--- a/oper_0_menu.html
+++ b/oper_0_menu.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-	<title>RX 2022 | Início</title>
+	<title>RX 2022 | InÃ­cio</title>
 	<link rel="shortcut icon" href="Imagens_Operacao/maquina_transp.png" type="image/x-icon" />
 
 	<link rel="stylesheet" href="site.css" />
@@ -14,7 +14,7 @@
 	<a class="logo3">CNC Machining</a>
 </header>
 
-<a href="RX.html">
+<a href="index.html">
   
 <img alt="rx_logo" class="logo1" src="Imagens_Operacao/rx_transp.png" /></a>
 
@@ -26,7 +26,6 @@
 <article class="grupo1">
  
 	<a>	Create Tools	</a>
-
 <div>
 	<a class="b" href="">PLANAR_MILL </a>
 
