--- a/oper_5_thread_mill.html
+++ b/oper_5_thread_mill.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>RX 2022 | Início</title>
+	<title>RX 2022 | InÃ­cio</title>
 	<link rel="shortcut icon" href="Imagens_Operacao/maquina_transp.png" type="image/x-icon" />
 
 	<link rel="stylesheet" href="site.css" />
@@ -16,7 +16,7 @@
 	<a class="logo3">CNC Machining</a>
 </header>
 
-<a href="RX.html">
+<a href="index.html">
   
 <img alt="rx_logo" class="logo1" src="Imagens_Operacao/rx_transp.png" /></a>
 
