--- a/admin/home.html
+++ b/admin/home.html
@@ -4,7 +4,7 @@
 
 <head>
 	<meta charset="UTF-8">
-	<title>RX 2022 | Início</title>
+	<title>RX 2022 | Manufatura</title>
 	<link rel="shortcut icon" href="static/imagens/Imagens_Operacao/maquina_transp.png" type="image/x-icon" />
     	<link rel="stylesheet" href="static/css/rx.css" />
 </head>
@@ -18,12 +18,32 @@
     
         <a class="logo_rx_cnc">CNC Machining</a>
 
-        <a class="bt_entrar" href="entrar.html">Entrar</a>
+        <a class="bt_sair" href="/index.html">Sair</a>
 
     </header>
 
     <main>
-        
+<section>
+	<a>	Criar	</a>
+<div>
+	<a href="" class="botao_menu">GEOMETRIA</a>
+	<a href="grupo" class="alterado" >FERRAMENTAS</a>
+	<a href="Operacoes" class="alterado">OPERAÇÕES</a></div>
+<div>
+	<a href="" class="botao_menu">POS PROCESSAR</a>
+	<a href="" class="botao_menu">DOC. TÉCNICA</a>
+	<a href="" class="botao_menu">MOVER OBJETO</a></div>
+<div>
+	<a href="" class="botao_menu">RASCUNHO</a>
+	<a href=""  class="botao_menu">MEDIR</a>
+	<a href="" class="botao_menu">ORIENTAR WCS</a></div>
+<div>
+	<a href="" class="botao_menu">SIMULAÇÃO</a>
+	<a href="" class="botao_menu">TRANSFORMAR</a>
+	<a href="" class="botao_menu">DEL_TRANSFORME</a></div>
+<div>
+	<a href="" class="botao_menu">BARRA DE SELEÇÃO</a></div>
+</section>
     </main>
 
     <footer>
