--- a/entrar.html
+++ b/entrar.html
@@ -42,9 +42,7 @@
             <input type="checkbox" id="login-lembrar" name="lembrar" value="SIM" />
         </div>
         <div>
-            <button type="submit" class="bt_acesso">
-                Fazer Login
-            </button>
+        <a class="bt_acesso" href="entrar.html">Fazer Login</a>
         </div>
     </form>
 </section>
