--- a/entrar.html
+++ b/entrar.html
@@ -42,7 +42,7 @@
             <input type="checkbox" id="login-lembrar" name="lembrar" value="SIM" />
         </div>
         <div>
-        <a class="bt_acesso" href="entrar.html">Fazer Login</a>
+        <a class="bt_acesso" href="home.html">Fazer Login</a>
         </div>
     </form>
 </section>
